# libplyio

./: .gitmodules  README.md
src/: CMakeLists.txt  ply_io.cpp  ply_io.h.in
src/example/: example.cpp  test.ply
